fix styling to work on firefox

--- a/src/styles/main_styling.scss
+++ b/src/styles/main_styling.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 html, body {
-    max-width: 100%;
-    overflow-x: hidden;
+    max-width: 100vw;
+    // overflow-x: hidden;
 }
 
 *{
@@ -29,8 +29,8 @@ body {
     background-position-x: center;
     background-repeat: no-repeat;
     display: flex;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     justify-content: center;
     position: absolute;
     background-attachment: fixed;
@@ -40,15 +40,15 @@ body {
 #arcade-machine {
     background-image: url("../assets/images/ArcadeMachine.png");
     background-position-x: center;
-    background-size: auto 100%;
+    background-size: auto 100vh;
     background-repeat: no-repeat;
     display: grid;
     grid-template-rows: 12% 9.6% 57.5% 4.5% 12% auto;
     background-color: transparent;
-    height: 100%;
+    height: 100vh;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
 }
 
 #arcade-machine h1 {
@@ -73,7 +73,9 @@ body {
     grid-row-end: 5;
     display: flex;
     position: relative;
-    height: 100%;
+    height: 4.5vh;
+    width: 88vh;
+    margin: auto;
 }
 
 #mute-button{
@@ -82,13 +84,13 @@ body {
     // font-size: 60px;
     position: absolute;
     left: 7vh;
-    top: -4.5vh;
+    top: -5vh;
     cursor: pointer;
 }
 
 #mute-button img {
-    width: 100%;
-    height: 100%;
+    width: 4vh;
+    height: 4vh;
     position: absolute;
 }
 
@@ -96,7 +98,7 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 75%;
+    width: calc(88vh * 0.75);
     position: relative;
     left: 13vh;
 }
@@ -107,9 +109,7 @@ body {
     font-size: 2.5vh;
     border: solid rgb(52, 52, 255) 1px;
     position: relative;
-    // left: 25vh;
-    top: -6vh;
-    // margin: 0vh auto;
+    top: -6.5vh;
     padding: 2vh;
     transition: margin 0.1s, padding 0.1s, font-size 0.1s;
     cursor: pointer;
@@ -126,9 +126,7 @@ body {
     font-size: 2.5vh;
     border: solid rgb(52, 52, 255) 1px;
     position: relative;
-    // left: 25vh;
-    top: -6vh;
-    // margin: 0vh auto;
+    top: -6.5vh;
     padding: 2vh;
     transition: margin 0.1s, padding 0.1s, font-size 0.1s;
     cursor: pointer;
@@ -146,6 +144,7 @@ body {
     display: flex;
     justify-content: center;
     height: 100%;
+    width: 100vw;
 }
 
 #controller1 {
