--- a/src/styles/modal_styling.scss
+++ b/src/styles/modal_styling.scss
@@ -120,6 +120,7 @@
     margin-right: 12px;
     font-family: "Press Start 2P", cursive;
     cursor: default;
+    white-space: nowrap;
 }
 
 .start-modal {
